<resources>
    <string name="app_name">Juego para parejas</string>
    <string name="main_title">¿Realmente me conoces?</string>
    <string name="hint_player_one_name">Nombre del jugador uno</string>
    <string name="hint_player_two_name">Nombre del jugador dos</string>
    <string name="button_start">EMPEZAR!</string>
    <string name="enter_player_names">Ingresar el nombre de los jugadores</string>
    <string name="mode_selection_title">ELIGE EL MODO DEL JUEGO</string>
    <string name="button_normal_mode">NORMAL</string>
    <string name="button_adult_mode">ADULTOS</string>
    <string name="pack_1_name">ME GUSTAS</string>
    <string name="pack_2_name">PRIMERA CITA</string>
    <string name="pack_3_name">ENAMORADOS</string>
    <string name="pack_4_name">SEAMOS NOVIOS</string>
    <string name="pack_5_name">DE NOVIOS</string>
    <string name="pack_6_name">CÁSATE CONMIGO</string>
    <string name="pack_7_name">LA BODA</string>
    <string name="pack_8_name">BODAS DE PLATA</string>
    <string name="pack_9_name">BODAS DE ORO</string>
    <string name="pack_10_name">BODAS DE PLATINO</string>
    <string name="pack_11_name">JUGUETES</string>
    <string name="pack_12_name">DISFRACES</string>
    <string name="pack_13_name">FANTASIA</string>
    <string name="pack_14_name">FRAGANCIAS</string>
    <string name="pack_15_name">ROMANCE</string>
    <string name="pack_16_name">FETICHES</string>
    <string name="player_one_instruction">Responde las siguientes 12 preguntas con honestidad. Luego %s intentará adivinar tus respuestas 😍</string>
    <string name="player_two_instruction">Responde las mismas preguntas que %s y trata de que tus respuestas coincidan con las suyas</string>
    <string name="button_start_test">EMPEZAR PRUEBA</string>
    <string name="placeholder_turn">NADA</string>
    <string name="sample_question">¿Cual es tu estación favorita?</string>
    <string name="answer_autumn">OTOÑO</string>
    <string name="answer_winter">INVIERNO</string>
    <string name="answer_spring">PRIMAVERA</string>
    <string name="answer_summer">VERANO</string>
    <string name="question_counter">Pregunta %d/12</string>
    <string name="question_counter_initial">Pregunta 1/12</string>
    <string name="turn_player">Turno de %1$s 🥰</string>
    <string name="turn_player_with_test">Turno de %1$s 🥰\nPrueba %2$s</string>
    <string name="result_percentage">Conoces a tu amor\n en un %1$d%%</string>
    <string name="paywall_title">🔒 Acceso Premium</string>
    <string name="paywall_message">Desbloquea 6 packs adultos con contenido exclusivo:\n\n• 🎭 Disfraces\n• 🧸 Juguetes\n• 💭 Fantasía\n• 🌸 Fragancias\n• 💕 Romance\n• 🔞 Fetiches\n\nSuscripción mensual - Cancela cuando quieras</string>
    <string name="paywall_subscribe">Suscribirse Ahora</string>
    <string name="paywall_cancel">Cancelar</string>
    <string name="result_perfect_match">Conoces a tu amor en un 100%%</string>
    <string name="button_switch_roles">Invertir Roles</string>
    <string name="button_different_test">Hacer una prueba diferente</string>
    <string name="q_p1_q1">Tu estación favorita es...</string>
    <string name="q_p1_q1_a1">OTOÑO</string>
    <string name="q_p1_q1_a2">INVIERNO</string>
    <string name="q_p1_q1_a3">PRIMAVERA</string>
    <string name="q_p1_q1_a4">VERANO</string>
    <string name="q_p1_q2">Si tu vida fuera un video juego ¿de que tipo sería?</string>
    <string name="q_p1_q2_a1">Acción</string>
    <string name="q_p1_q2_a2">Aventura</string>
    <string name="q_p1_q2_a3">Deportes</string>
    <string name="q_p1_q2_a4">Fiesta</string>
    <string name="q_p1_q3">¿Cual es tu tipo de música preferida?</string>
    <string name="q_p1_q3_a1">Pop</string>
    <string name="q_p1_q3_a2">Rock</string>
    <string name="q_p1_q3_a3">Reggaeton</string>
    <string name="q_p1_q3_a4">Electrónica</string>
    <string name="q_p1_q4">¿A qué animal te pareces más?</string>
    <string name="q_p1_q4_a1">Perro</string>
    <string name="q_p1_q4_a2">Gato</string>
    <string name="q_p1_q4_a3">León</string>
    <string name="q_p1_q4_a4">Tortuga</string>
    <string name="q_p1_q5">Es viernes en la noche y tú...</string>
    <string name="q_p1_q5_a1">¡De fiesta!</string>
    <string name="q_p1_q5_a2">Trabajando...</string>
    <string name="q_p1_q5_a3">Durmiendo</string>
    <string name="q_p1_q5_a4">viendo series o películas</string>
    <string name="q_p1_q6">Si tuvieras un deseo ¿Cual sería?</string>
    <string name="q_p1_q6_a1">Ser el mejor en todo</string>
    <string name="q_p1_q6_a2">Superpoderes</string>
    <string name="q_p1_q6_a3">Dinero ¡y mucho!</string>
    <string name="q_p1_q6_a4">Dominar el mundo</string>
    <string name="q_p1_q7">En qué época debiste haber nacido</string>
    <string name="q_p1_q7_a1">La edad oscura</string>
    <string name="q_p1_q7_a2">Los 60s</string>
    <string name="q_p1_q7_a3">La actualidad</string>
    <string name="q_p1_q7_a4">El futuro</string>
    <string name="q_p1_q8">¿Qué te haría más feliz?</string>
    <string name="q_p1_q8_a1">Dormir más</string>
    <string name="q_p1_q8_a2">Menos trabajo</string>
    <string name="q_p1_q8_a3">Más tiempo con amigos y familia</string>
    <string name="q_p1_q8_a4">Más dinero</string>
    <string name="q_p1_q9">Describe tu estilo en una palabra</string>
    <string name="q_p1_q9_a1">Fino</string>
    <string name="q_p1_q9_a2">Glamuroso</string>
    <string name="q_p1_q9_a3">Elegante</string>
    <string name="q_p1_q9_a4">Hipster</string>
    <string name="q_p1_q10">¿Que buscas más en un amigo?</string>
    <string name="q_p1_q10_a1">Lealtad</string>
    <string name="q_p1_q10_a2">Amabilidad</string>
    <string name="q_p1_q10_a3">Humor</string>
    <string name="q_p1_q10_a4">Inteligencia</string>
    <string name="q_p1_q11">Tu color favorito es...</string>
    <string name="q_p1_q11_a1">Verde</string>
    <string name="q_p1_q11_a2">Rojo/Rosa</string>
    <string name="q_p1_q11_a3">Azul/Violeta</string>
    <string name="q_p1_q11_a4">Amarillo</string>
    <string name="q_p1_q12">¿Cual es tu tipo de película favorita</string>
    <string name="q_p1_q12_a1">Acción</string>
    <string name="q_p1_q12_a2">Comedia</string>
    <string name="q_p1_q12_a3">Romance</string>
    <string name="q_p1_q12_a4">Ciencia Ficción</string>
    <string name="q_p2_q1">¿Cuál es tu deporte favorito</string>
    <string name="q_p2_q1_a1">Béisbol</string>
    <string name="q_p2_q1_a2">Fútbol</string>
    <string name="q_p2_q1_a3">Basket</string>
    <string name="q_p2_q1_a4">Tennis</string>
    <string name="q_p2_q2">¿Cuál es la cosa más importante en tu vida</string>
    <string name="q_p2_q2_a1">Familia</string>
    <string name="q_p2_q2_a2">Amigos</string>
    <string name="q_p2_q2_a3">Trabajo</string>
    <string name="q_p2_q2_a4">Pasatiempos</string>
    <string name="q_p2_q3">¿Cual es tu bebida favorita?</string>
    <string name="q_p2_q3_a1">Agua</string>
    <string name="q_p2_q3_a2">Café/Té</string>
    <string name="q_p2_q3_a3">Gaseosa</string>
    <string name="q_p2_q3_a4">Alcohol</string>
    <string name="q_p2_q4">¿A qué le tienes más miedo?</string>
    <string name="q_p2_q4_a1">Insectos</string>
    <string name="q_p2_q4_a2">Alturas</string>
    <string name="q_p2_q4_a3">Encierro</string>
    <string name="q_p2_q4_a4">Fracaso</string>
    <string name="q_p2_q5">¿Qué prefieres para el desayuno?</string>
    <string name="q_p2_q5_a1">Tostadas</string>
    <string name="q_p2_q5_a2">Cereal</string>
    <string name="q_p2_q5_a3">Huevos</string>
    <string name="q_p2_q5_a4">Sólo un café</string>
    <string name="q_p2_q6">¿A donde irías en un día libre?</string>
    <string name="q_p2_q6_a1">El campo</string>
    <string name="q_p2_q6_a2">La ciudad</string>
    <string name="q_p2_q6_a3">La playa</string>
    <string name="q_p2_q6_a4">Me quedaría en casa</string>
    <string name="q_p2_q7">¿Cual es tu momento favorito del día</string>
    <string name="q_p2_q7_a1">La mañana</string>
    <string name="q_p2_q7_a2">La tarde</string>
    <string name="q_p2_q7_a3">La noche</string>
    <string name="q_p2_q7_a4">La madrugada</string>
    <string name="q_p2_q8">¿Qué llevas siempre en tu bolso de viaje?</string>
    <string name="q_p2_q8_a1">Un cargador de teléfono</string>
    <string name="q_p2_q8_a2">Dinero extra</string>
    <string name="q_p2_q8_a3">Una guía de viaje</string>
    <string name="q_p2_q8_a4">Un cepillo de dientes</string>
    <string name="q_p2_q9">Qué superpoder te gustaría tener</string>
    <string name="q_p2_q9_a1">Superfuerza</string>
    <string name="q_p2_q9_a2">Ser invisible</string>
    <string name="q_p2_q9_a3">Detener el tiempo</string>
    <string name="q_p2_q9_a4">Volar</string>
    <string name="q_p2_q10">¿Que te gustaría ser?</string>
    <string name="q_p2_q10_a1">Un músico famoso</string>
    <string name="q_p2_q10_a2">Un atleta de élite</string>
    <string name="q_p2_q10_a3">Un político respetado</string>
    <string name="q_p2_q10_a4">Un gran profesional</string>
    <string name="q_p2_q11">Si sólo quedarán dos horas para el fin del mundo ¿Qué harías?</string>
    <string name="q_p2_q11_a1">Dormir</string>
    <string name="q_p2_q11_a2">Buscar una buena vista</string>
    <string name="q_p2_q11_a3">Cualquier locura que se me ocurra</string>
    <string name="q_p2_q11_a4">Decirle adiós a mis seres queridos</string>
    <string name="q_p2_q12">¿Qué preferirías recibir cómo regalo</string>
    <string name="q_p2_q12_a1">Chocolates</string>
    <string name="q_p2_q12_a2">Libros</string>
    <string name="q_p2_q12_a3">Flores</string>
    <string name="q_p2_q12_a4">Alcohol</string>
    <string name="q_p3_q1">¿Qué te llevarías a una isla desierta</string>
    <string name="q_p3_q1_a1">Un libro</string>
    <string name="q_p3_q1_a2">Una radio</string>
    <string name="q_p3_q1_a3">Un cuchillo</string>
    <string name="q_p3_q1_a4">Un balón</string>
    <string name="q_p3_q2">¿Qué prefieres cómo tema de conversación?</string>
    <string name="q_p3_q2_a1">Deportes</string>
    <string name="q_p3_q2_a2">Música</string>
    <string name="q_p3_q2_a3">Películas y series</string>
    <string name="q_p3_q2_a4">Política</string>
    <string name="q_p3_q3">¿Qué prefieres hacer un fin de semana?</string>
    <string name="q_p3_q3_a1">Pescar</string>
    <string name="q_p3_q3_a2">Escalar montañas</string>
    <string name="q_p3_q3_a3">Broncearte</string>
    <string name="q_p3_q3_a4">Ir a conciertos</string>
    <string name="q_p3_q4">Una película sobre tu vida ¿Qué tipo de película sería?</string>
    <string name="q_p3_q4_a1">Una comedia</string>
    <string name="q_p3_q4_a2">Un drama</string>
    <string name="q_p3_q4_a3">De Acción</string>
    <string name="q_p3_q4_a4">Romántica</string>
    <string name="q_p3_q5">¿Cuál de tus sentidos te gustaría mejorar?</string>
    <string name="q_p3_q5_a1">Vista</string>
    <string name="q_p3_q5_a2">Audición</string>
    <string name="q_p3_q5_a3">Olfato</string>
    <string name="q_p3_q5_a4">Gusto</string>
    <string name="q_p3_q6">¿Qué adjetivo te define mejor?</string>
    <string name="q_p3_q6_a1">Infantil</string>
    <string name="q_p3_q6_a2">Alegre</string>
    <string name="q_p3_q6_a3">Sociable</string>
    <string name="q_p3_q6_a4">Trabajador</string>
    <string name="q_p3_q7">A qué lección preferirías inscribirte?</string>
    <string name="q_p3_q7_a1">Tiro con arco</string>
    <string name="q_p3_q7_a2">Cerámica</string>
    <string name="q_p3_q7_a3">Esgrima</string>
    <string name="q_p3_q7_a4">Baile</string>
    <string name="q_p3_q8">¿Sin qué no podrías vivir?</string>
    <string name="q_p3_q8_a1">Música</string>
    <string name="q_p3_q8_a2">Teléfono móvil</string>
    <string name="q_p3_q8_a3">Mi mascota</string>
    <string name="pass_phone_caption">No mires la pantalla</string>
    <string name="pass_phone_hidden_hint">Contenido oculto hasta que sea tu turno</string>
    <string name="how_to_play">¿Cómo se juega?</string>
</resources>